How to borrow and save

--- a/index.html
+++ b/index.html
@@ -81,6 +81,60 @@
 
         <div class="how-to-borrow-and-save">
             <h1>How to borrow and save money responsibly</h1>
+            <p>
+                Debt itself is not bad if you borrow responsibly and use debt to achieve your long term goals.
+                Saving and Investing your money is one of the most basic ways to boost your financial reserves.It offers peace of mind knowing that you 
+                have a certain amount accumulated for times of need.You can lead a stress-free life with the knowledge that you will not have to struggle 
+                if things take an unexpected turn.
+            </p>
+            <h2>Borrowing</h2>
+            <div id="borrowing">
+                <div>
+                    <img src="asserts/img/pexels-pixabay-164571_cards.jpg" alt="">
+                </div>
+                <div>
+                    <div id="borrow">
+                        <p>
+                            To borrow responsibly means the following:
+                        </p>
+                        <ol>
+                            <li>Borrow only what you can repay</li>
+                            <li>Pay debts on time</li>
+                            <li>Tell your creditor if you cannot pay and make a new arrangement with your creditor</li>
+                            <li>Report lost or stolen credit cards immediately</li>
+                        </ol>
+                    </div>
+                    <div id="borrow">
+                        <p>
+                            Before you borrow money:
+                        </p>
+                        <ol>
+                            <li>Remember it is cheaper to repay loans over a shorter period</li>
+                            <li>Ask what the interest rate is and work out what this means for you</li>
+                            <li>Compare interest rates</li>
+                            <li>Look at the small print, which explains all the terms and conditions</li>
+                            <li>Remember that interest rates could change and your installment could increase</li>
+                            <li>Calculate extra costs like administration fees into your installment</li>
+                        </ol>
+                    </div>
+                </div id=borrowing>
+            </div>
+                <h2>Tips for saving money</h2>
+                <ul>
+                    <li>Keep track of your spending</li>
+                    <li>Separate wants from needs</li>
+                    <li>Avoid using credit to pay your bills</li>
+                    <li>Save regularly</li>
+                    <li>Review your insurance policies</li>
+                    <li>Cut or downgrade your services</li>
+                    <li>Try lowering your energy bill</li>
+                    <li>Cut down on take-out ordering</li>
+                </ul>
+            <div id="borrowing">
+                <div id="borrow">
+                    
+                </div>
+            </div>
         </div>
 
         <div class="credit-score">
